--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,61 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-      margin: 0;
-        font-family: sans-serif;
-        }
-        
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fafafa;
+  color: #333;
+}
+
+h1 {
+  font-size: 32px;
+  margin: 0 0 8px 0;
+  color: #1976d2;
+}
+
+h2 {
+  font-size: 20px;
+  margin: 0 0 16px 0;
+  color: #333;
+}
+
+h3 {
+  font-size: 16px;
+  margin: 0 0 12px 0;
+  color: #555;
+}
+
+input[type='number'],
+input[type='text'] {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  font-family: inherit;
+}
+
+input[type='number']:focus,
+input[type='text']:focus {
+  outline: none;
+  border-color: #1976d2;
+  box-shadow: 0 0 0 3px rgba(25, 118, 210, 0.1);
+}
+
+label {
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 4px;
+  color: #555;
+}
+
+p {
+  margin: 0;
+  color: #666;
+  font-size: 14px;
 }
